--- a/CarParking proves.ipynb
+++ b/CarParking proves.ipynb
@@ -490,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Uni",
    "language": "python",
    "name": "python3"
   },
@@ -504,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
