--- a/proves.ipynb
+++ b/proves.ipynb
@@ -490,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Uni",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
