--- a/CarParking copy.ipynb
+++ b/CarParking copy.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "id": "36445a03",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "id": "42b64453",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "id": "c7d2fdc2",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "id": "3646a2a1",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "id": "6bc2c84e",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 83,
    "id": "8ac853b4",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 84,
    "id": "ac6dbd13",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 85,
    "id": "610176fe",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 86,
    "id": "b1aa7580",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 87,
    "id": "2322877f",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 88,
    "id": "a599b4c4",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 89,
    "id": "da014915",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 90,
    "id": "e8869321",
    "metadata": {},
    "outputs": [],
@@ -454,18 +454,22 @@
     "\n",
     "    best_score = float('-inf')\n",
     "    best_match = '?'\n",
+    "    \n",
+    "    #print(f\"Nou caracter a reconèixer\")\n",
     "\n",
     "    for label, tmpl in templates.items():\n",
-    "        score = cv2.matchTemplate(char_bin, tmpl, cv2.TM_CCOEFF)[0][0]\n",
+    "        result = cv2.matchTemplate(char_bin, tmpl, cv2.TM_CCOEFF_NORMED)\n",
+    "        score = result[0][0]\n",
     "        if score > best_score:\n",
     "            best_score = score\n",
     "            best_match = label\n",
+    "        #print(f\"Caracter: '{label}' | Score: {score:.4f}\")\n",
     "    return best_match\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "id": "2fd57826",
    "metadata": {},
    "outputs": [
@@ -725,6 +729,40 @@
     "        plt.axis('off')\n",
     "    plt.show()\n",
     "    print(\"Matrícula detectada:\", matricula)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2421491d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "2e893d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text detectat: \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Només si tens OpenCV-contrib instal·lat\n",
+    "import cv2\n",
+    "ocr = cv2.text.OCRTesseract_create()\n",
+    "output_text = ocr.run(\n",
+    "    image=morph,                # Imatge d'entrada\n",
+    "    min_confidence=0,          # Llindar mínim de confiança\n",
+    "    component_level=cv2.text.OCR_LEVEL_WORD  # o OCR_LEVEL_TEXTLINE\n",
+    ")\n",
+    "print(\"Text detectat:\", output_text)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
