--- a/Generador_Plantilles_Binaries.ipynb
+++ b/Generador_Plantilles_Binaries.ipynb
@@ -16,7 +16,7 @@
     "os.makedirs(f\"{output_dir}/numeros\", exist_ok=True)\n",
     "os.makedirs(f\"{output_dir}/lletres\", exist_ok=True)\n",
     "\n",
-    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "font = cv2.FONT_HERSHEY_DUPLEX  \n",
     "font_scale = 2.5\n",
     "thickness = 7\n",
     "size = (40, 60)\n",
@@ -26,7 +26,7 @@
     "    text_size = cv2.getTextSize(char, font, font_scale, thickness)[0]\n",
     "    text_x = (img.shape[1] - text_size[0]) // 2\n",
     "    text_y = (img.shape[0] + text_size[1]) // 2\n",
-    "    cv2.putText(img, char, (text_x, text_y), font, font_scale, 0, thickness)\n",
+    "    cv2.putText(img, char, (text_x, text_y), font, font_scale, 0, thickness, cv2.LINE_AA)\n",
     "    cv2.imwrite(f\"{output_dir}/numeros/{char}.jpg\", img)\n",
     "\n",
     "for char in \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\":\n",
@@ -34,14 +34,14 @@
     "    text_size = cv2.getTextSize(char, font, font_scale, thickness)[0]\n",
     "    text_x = (img.shape[1] - text_size[0]) // 2\n",
     "    text_y = (img.shape[0] + text_size[1]) // 2\n",
-    "    cv2.putText(img, char, (text_x, text_y), font, font_scale, 0, thickness)\n",
+    "    cv2.putText(img, char, (text_x, text_y), font, font_scale, 0, thickness, cv2.LINE_AA)\n",
     "    cv2.imwrite(f\"{output_dir}/lletres/{char}.jpg\", img)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Uni",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
